--- a/workspace2/ERPlab/src/main/resources/static/css/d/equipment.css
+++ b/workspace2/ERPlab/src/main/resources/static/css/d/equipment.css
@@ -1,23 +1,23 @@
-.event_container {
+.equipment_container {
 	padding: 2%;
 }
 
-.event_container>.event_title {
+.equipment_container>.equipment_title {
 	text-align: center;
 }
 
-.event_container>.event_body {
+.equipment_container>.equipment_body {
 	display: flex;
 	justify-content: space-between;
 }
 
-.event_container>.event_body>.event_regist {
+.equipment_container>.equipment_body>.equipment_regist {
 	width: 45%;
 	height: 100%;
 	overflow: hidden;
 }
 
-.event_container>.event_body .vertical_line {
+.equipment_container>.equipment_body .vertical_line {
 	height: 100vh;
 	width: 0.075vw;
 	border-width: 0;
@@ -25,18 +25,17 @@
 	background-color: rgba(160, 160, 160, 0.4);
 }
 
-.event_container>.event_body>.regits_form {
+.equipment_container>.equipment_body>.regits_form {
 	width: 50%;
 	height: 100%;
 }
 
-.event_container>.event_body>.regits_form .sec {
+.equipment_container>.equipment_body>.regits_form .sec {
 	display: flex;
 	margin: 2%;
 }
 
-.event_container>.event_body>.regits_form .sec>#event_start,
-#event_end {
+.equipment_container>.equipment_body>.regits_form .sec>#equipment_date{
 	-moz-appearance: none;
 	-webkit-appearance: none;
 	-ms-appearance: none;
@@ -53,39 +52,34 @@
 	width: 100%;
 }
 
-.event_container>.event_body>.regits_form .sec>label {
+.equipment_container>.equipment_body>.regits_form .sec>label {
 	width: 40%;
 }
 
-.event_container>.event_body>.regits_form .sec>input:focus,
+.equipment_container>.equipment_body>.regits_form .sec>input:focus,
 select:focus {
 	border-color: #000b9e;
 }
 
-.event_container>.event_body>.regits_form .sec>.goods_regist {
-	display: flex;
-	justify-content: space-between;
-	width: 100%;
-}
-.event_container>.event_body>.regits_form .sec>.company_regist {
+.equipment_container>.equipment_body>.regits_form .sec>.eqkind_regist, .eqgrade_regist  {
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
 }
 
-.event_container>.event_body>.regits_form button {
+.equipment_container>.equipment_body>.regits_form button {
 	border-color: #000b9e;
 	height: 100%;
 	width: 15%;
 }
 
-.event_container>.event_body>.regits_form .sec>.goods_regist>#goods_name {
+.equipment_container>.equipment_body>.regits_form .sec>.eqkind_regist>#eqkind_name {
 	width: 80%;
 }
-.event_container>.event_body>.regits_form .sec>.company_regist>#company_name {
+.equipment_container>.equipment_body>.regits_form .sec>.eqgrade_regist>#eqgrade_name {
 	width: 80%;
 }
-.event_container>.event_body>.regits_form .sec>input[type="number"] {
+.equipment_container>.equipment_body>.regits_form .sec>input[type="number"] {
 	appearance: none;
 	background: rgba(160, 160, 160, 0.075);
 	border: solid 1px rgba(160, 160, 160, 0.3);
@@ -95,26 +89,26 @@ select:focus {
 	width: 100%;
 }
 
-.event_container>.event_body>.regits_form button {
+.equipment_container>.equipment_body>.regits_form button {
 	border-color: #000b9e;
 }
 
 .post .content {
 	font-size: 1.1rem;
 }
-.event_container>.event_body>.regits_form .sec>.company_regist>#companylist_search {
+.equipment_container>.equipment_body>.regits_form .sec>.eqkind_regist>#eqkindlist_search {
 	line-height: 0;
 }
 
-.event_container>.event_body>.regits_form .sec>.company_regist>#companylist_search>img {
+.equipment_container>.equipment_body>.regits_form .sec>.eqkind_regist>#eqkindlist_search>img {
 	width: 25px;
 	height: 25px;
 }
-.event_container>.event_body>.regits_form .sec>.goods_regist>#goodslist_search {
+.equipment_container>.equipment_body>.regits_form .sec>.eqgrade_regist>#eqgrade_search {
 	line-height: 0;
 }
 
-.event_container>.event_body>.regits_form .sec>.goods_regist>#goodslist_search>img {
+.equipment_container>.equipment_body>.regits_form .sec>.eqgrade_regist>#eqgradelist_search>img {
 	width: 25px;
 	height: 25px;
 }
@@ -130,7 +124,7 @@ select:focus {
 	width: 80%;
 }
 
-.selected_event_items {
+.selected_equipment_items {
 	background-color: #FDECC5 !important;
 	color: #000b9e;
 	border-left: 1px solid #000b9e !important;
