--- a/workspace2/ERPlab/src/main/resources/static/webdesign/assets/css/main.css
+++ b/workspace2/ERPlab/src/main/resources/static/webdesign/assets/css/main.css
@@ -3189,7 +3189,7 @@ input, select, textarea {
 			-ms-flex: 1;
 			flex: 1;
 			border-left: solid 1px rgba(160, 160, 160, 0.3);
-			height: 100px;
+			height: 100%;
 			line-height: inherit;
 			margin-left: 1.5em;
 			overflow: hidden;
@@ -3276,6 +3276,10 @@ input, select, textarea {
 							width: inherit;
 						}
 
+		#header .loginSessionView {
+			padding: 25px;
+		}
+		
 		#header form {
 			margin: 0;
 		}
