--- a/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/d/customer_list.html
+++ b/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/d/customer_list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>항목조회</title>
+    <title>고객정보조회</title>
     
     <link rel="stylesheet" href="/css/common.css" />
     <link rel="stylesheet" href="/webdesign/assets/css/main.css"/>
@@ -15,27 +15,33 @@
                 <table>
                     <thead>
                         <tr>
-                            <th class="equipment_title">
-                                <span>항목조회</span>
+                            <th class="customer_title">
+                                <span>고객정보조회</span>
                             </th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr class="items">
                             <td>
-                                <article class="post" th:each="cvalue_item : ${cvalue_list}">
+                                <article class="post" th:each="customer_item : ${customer_list}">
                                     <header>
                                         <div class="title">
-                                            <h2>[[${cvalue_item.cvalue_name}]]</h2>
-                                            <p>[[${cvalue_item.cvalue_ctgr}]]</p>
-                                            <p class="hidden">[[${cvalue_item.cvalue_no}]]</p>
+                                            <h2>[[${customer_item.customer_name}]] </h2>
+                                            <p>
+												등급 : [[customer_item.csgrade_no]]
+												주소 : [[${customer_item.customer_addr1}]] [[${customer_item.customer_addr2}]] [[${customer_item.customer_postal}]]	<br/>
+												전화번호 : [[${customer_item.customer_phone}]]
+												비고 : [[${customer_item.customer_comment}]]
+											</p>
+                                            
+                                            <p class="hidden">[[${customer_item.customer_no}]]</p>
                                         </div>
                                     </header>
                                     <p class="content"></p>
                                     <footer>
                                         <ul class="actions">
                                             <li>
-                                                <button class="button large cvalue_type_select_btn">
+                                                <button class="button large customer_type_select_btn">
 													SELECT
 												</button>
                                             </li>
@@ -54,6 +60,6 @@
         <script src="/webdesign/assets/js/breakpoints.min.js"></script>
         <script src="/webdesign/assets/js/util.js"></script>
         <script src="/webdesign/assets/js/main.js"></script>
-        <script src="/js/d/d5/cvalue_list.js"></script>
+        <script src="/js/d/d5/customer_list.js"></script>
 </body>
 </html>
