--- a/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/a/company.html
+++ b/workspace2/ERPlab/src/main/resources/templates/views/thymeleaf/a/company.html
@@ -9,8 +9,9 @@
         <link rel="stylesheet" href="/css/a/company.css" />
     </head>
     <body>
+		<th:block th:insert="~{common/header::header}"></th:block>
         <div class="comp_container">
-            <h2 class="comp_title"><a th:href="@{/a/a1/company}">회사등록</a></h2>
+            <h2 class="comp_title"><a th:href="@{/a/a1/a11/company}">회사등록</a></h2>
             <div class="comp_body">
                 <div class="comp_regist">
 					<table class="company_search">
