admincontroller 2nd update

--- a/workspace2/ERPlab/src/main/resources/static/css/dhcss/dh.css
+++ b/workspace2/ERPlab/src/main/resources/static/css/dhcss/dh.css
@@ -63,11 +63,19 @@
 	transform: translate(-50%, -50%);
 }
 
+.dh_alignrightsave {
+	position: absolute;
+	left: 77%;
+	transform: translate(-50%, -50%);
+}
+
 .required {
 	background-color : lightyellow !important;
 }
 
-
+.dh_overflow {
+	overflow: scroll;
+}
 
 
 
